--- a/MainAnalysisPA2016/20250929_ReducedTreePA/makefile
+++ b/MainAnalysisPA2016/20250929_ReducedTreePA/makefile
@@ -2,21 +2,24 @@
 
 default: TestRun
 
-TestRun: Execute
-	# ./Execute --Input Samples/DYLLMC/HiForestMiniAOD_100.root --Output SkimReco.root --MinZPT 40 --Fraction 0.05 \
-	# 	--TrackEfficiencyPath $(ProjectBase)/CommonCode/root/ --DoGenLevel false \
-	# 	--DoTrackResidual false
-	./Execute --Input Samples/DYLLMC/HiForestMiniAOD_100.root --Output SkimGen.root --MinZPT 40 --Fraction 0.05 \
-		--TrackEfficiencyPath $(ProjectBase)/CommonCode/root/ --DoGenLevel true \
-		--DoTrackResidual false
+Prepare:
+	mkdir -p Samples
+	# this is in lxplus
+	ln -sf /eos/cms/store/group/phys_heavyions/chenyi/PPb2016/Forest/DYtoMuMu_M-30_pPb-EmbEPOS_8p16_Powheg/pPb816Summer16DR-pPbEmb_80X_mcRun2_pA_v4-v2/AODSIM/DYtoMuMu_M-30_pPb-EmbEPOS_8p16_Powheg/20250424_ZHadronPbPMCWithMuTreeGen/250424_175151/0000// Samples/PAMC
+	ln -sf /eos/cms/store/group/phys_heavyions/chenyi/PPb2016/Forest/DYtoMuMu_M-30_PbP-EmbEPOS_8p16_Powheg/pPb816Summer16DR-PbPEmb_80X_mcRun2_pA_v4-v1/AODSIM/DYtoMuMu_M-30_PbP-EmbEPOS_8p16_Powheg/20250424_ZHadronPPbMCWithMuTreeGen/250424_175137/0000// Samples/APMC
+	ln -sf /eos/cms/store/group/phys_heavyions/chenyi/PPb2016/Forest/PASingleMuon/PARun2016C-PromptReco-v1/AOD/PASingleMuon/20250414_ZHadronSingleMuonWithMuTree_TriggerGated_MuTree/250419_234027// Samples/PAData
 
-TestRunBase: Execute
-	./Execute --Input HiForestMiniAOD_314.root --Output Skim.root --MinZPT 40 --Fraction 0.05 \
-		--TrackEfficiencyPath $(ProjectBase)/CommonCode/root/ --DoGenLevel false \
-		--DoTrackResidual true \
-		--TrackResidualPath "$(ProjectBase)/CommonCode/root/20230522_TrackResidualCorrection_V9_0_20.root,$(ProjectBase)/CommonCode/root/20230522_TrackResidualCorrection_V9_20_60.root,$(ProjectBase)/CommonCode/root/20230522_TrackResidualCorrection_V9_60_100.root,$(ProjectBase)/CommonCode/root/20230522_TrackResidualCorrection_V9_100_200.root"
+TestRun: Execute
+	./Execute --Input Samples/PAMC/HiForestAOD_1.root --Output SkimReco.root --MinZPT 20 --Fraction 0.05 \
+		--TrackEfficiencyPath $(AnalysisBasePA)/Corrections/Tracking/Hijing_8TeV_dataBS.root --DoGenLevel false \
+		--DoTrackResidual false
+	./Execute --Input Samples/PAMC/HiForestAOD_1.root --Output SkimGen.root --MinZPT 20 --Fraction 0.05 \
+		--TrackEfficiencyPath $(AnalysisBasePA)/Corrections/Tracking/Hijing_8TeV_dataBS.root --DoGenLevel true \
+		--DoTrackResidual false
 
 Execute: ReduceForest.cpp
 	g++ ReduceForest.cpp -o Execute \
 		`root-config --cflags --glibs` \
 		-I$(ProjectBase)/CommonCode/include $(ProjectBase)/CommonCode/library/Messenger.o
+
+
